<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.fragment.MainFragment">

    <data>
        <variable
            name="mainFrgViewModel"
            type="com.clarion.mvvmdiexample.viewmodel.fragment.MainFrgViewModel"/>
    </data>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/act_btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <Button
            android:id="@+id/btnDB"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/btn_local_db"
            app:layout_constraintBottom_toTopOf="@+id/btnRemote"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="@{mainFrgViewModel.onLocalDBClick}"/>

        <Button
            android:id="@+id/btnRemote"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/btn_remote_data"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="@{mainFrgViewModel.onRemoteDataClick}"/>

        <Button
            android:id="@+id/btnVP"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/btn_view_pager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRemote"
            android:onClick="@{mainFrgViewModel.onViewPagerClick}"
            android:visibility="visible"/>

        <Button
            android:id="@+id/btnGallery"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/btn_gallery_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnVP"
            android:onClick="@{mainFrgViewModel.onGalleryViewClick}"/>

    </android.support.constraint.ConstraintLayout>
</layout>